--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@semantic-release/git": "^7.0.8",
     "@semantic-release/npm": "^5.1.4",
     "@types/jest": "^24.0.6",
+    "@types/node": "^11.9.5",
     "husky": "^1.3.1",
     "jest": "^24.1.0",
     "lint-staged": "^8.1.4",
